fixed sidebar spacing

--- a/src/assets/scss/layout/sidebar.scss
+++ b/src/assets/scss/layout/sidebar.scss
@@ -17,8 +17,9 @@ $title-light: #74e035;
 
 .quick-info {
     /*background-color: #f8f9fa;*/
+    min-height: 500px;
     min-width: 292px;
-    background-color: rgb(213, 255, 232);
+    background-color: #dfe5f0;
     margin-top: 50px;
     padding: 15px;
     position: fixed;
@@ -26,17 +27,62 @@ $title-light: #74e035;
     
 }
 
+.sidebar-main{
+    min-width: 292px;
+    /*background-color: #dfe5f0;*/
+    background: $layout-bg-color;
+    border-left: 2px solid lighten(black,60%);
+    color:$standard-fontcolor;
+    transition: all 0.5s cubic-bezier(0.945, 0.02, 0.27, 0.665);
+    transform-origin: bottom right;
+
+    ul{
+
+        li{
+            color:$dark;
+            /*border-bottom: 1px solid black;*/
+            font-size: 16px;
+            font-weight: 500;
+            transition: all 0.2s ease;
+            a{
+                width:100%;
+                text-decoration: none;
+                padding-left: 20px;
+                padding-right: 20px;
+                display: block;
+                transition: all 0.2s ease;
+                cursor: pointer;
+                font-size: 20px;
+
+                &:hover{
+                    padding-right: 20px;
+                    color:$active-standard-fontcolor !important;
+                }
+                i{
+                    color:$lighten-standard-fontcolor !important;
+                }
+            }
+            &:last-child{
+                /*border-bottom: 1px solid black;*/
+            }
+        }
+
+    }
+}
+
 
 .sidebar{
     position: fixed;
     margin-top: 50px;
     /*min-width: 292px;*/
-    background-color: rgb(213, 255, 232);
+    background-color: #dfe5f0;
+    /*background-color: rgb(213, 255, 232);*/
     /*background: $layout-bg-color;*/
     border-left: 2px solid lighten(black,60%);
     color:$standard-fontcolor;
     transition: all 0.5s cubic-bezier(0.945, 0.02, 0.27, 0.665);
     transform-origin: bottom right;
+
     ul{
 
         li{
@@ -84,10 +130,13 @@ $title-light: #74e035;
 .right-sidebar-main{
     position: relative; 
     width: 292px !important;
+    height: 500px; 
+    top: 250px;
+    
     .content {
         position: sticky; 
-        padding-left: 60px; 
-        padding-top: 250px; 
+        padding-left: 60px;  
+        padding-top: 50px;
         line-height: 40px; 
         height: 500px; 
     }
@@ -95,6 +144,8 @@ $title-light: #74e035;
 
 
 .left-sidebar{
+    min-height: 500px;
+    min-width: 292px;
     line-height: 85px;
     &.active {
         margin-left: -300px;
@@ -107,6 +158,7 @@ $title-light: #74e035;
 
 .contents{
     width: auto;
+    height: auto;
     margin-left: 100px;
     margin-right: 100px;
     min-height: 74vh;
